# pmo_hub

./: .env  .gitignore  Dockerfile  README.md  add_tag.txt  debug_sortable.py  entrypoint.sh  entrypoint_prod.sh  pyproject.toml  requisitos.md  reset_lineage_db.py  start_server_hub.bat  start_server_hub_dev copy.bat
.github/workflows/: deploy.yaml
pmo_hub/: debug_sortable.py  manage.py  modelo.dot  reset_db.py
pmo_hub/core/: __init__.py  apps.py  context_processors.py  forms.py  tests.py  views.py
pmo_hub/core/admin/: __init__.py  auxiliares.py  demanda_admin.py  forms.py  inlines.py  tarefas.py
pmo_hub/core/migrations/: 0001_initial.py  0001_initial_squashed_0024_historicaltarefas.py  0002_contato_demanda_descricao_demanda_observacao_and_more.py  0003_demanda_data_fechamento.py  0004_pendencia.py  0005_historicalpendencia.py  0006_historicaldemanda.py  0007_situacao_padrao.py  0008_situacao_pendente.py  0009_demanda_anexos_historicaldemanda_anexos.py  0010_documento_remove_demanda_anexos_and_more.py  0011_delete_documento_alter_anexodemanda_options_and_more.py  0012_alter_situacao_cor_hex_alter_situacao_padrao_and_more.py  (+30 more)
pmo_hub/gcp/: admin.py  inlines.py  jobs.py  logs.py  models.py  services.py  views.py
pmo_hub/initial_querys/: rotulos.py
pmo_hub/lineage/: admin.py  apps.py  jobs.py  models.py  services.py  urls.py
pmo_hub/pmo/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
pmo_hub/scripts/: bq_backfill_lineage.py  gcs_backfill_assets.py
pmo_hub/users/: forms.py  models.py  views.py
pmo_hub/wiki/: admin.py  models.py  urls.py  views.py
(+77 files in other folders)
