[project]
name = "datahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0",
    "django-admin-sortable2>=2.3.1",
    "django-crum>=0.7.9",
    "django-jazzmin>=3.0.1",
    "django-simple-history>=3.11.0",
    "django-stubs>=5.2.8",
    "whitenoise>=6.11.0",
]
