[project]
name = "datahub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cron-descriptor>=2.0.8",
    "croniter>=6.2.2",
    "django>=6.0",
    "django-admin-sortable2>=2.3.1",
    "django-apscheduler>=0.7.0",
    "django-crum>=0.7.9",
    "django-jazzmin>=3.0.1",
    "django-simple-history>=3.11.0",
    "django-stubs>=5.2.8",
    "djangorestframework>=3.17.1",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-storage>=3.10.1",
    "loguru>=0.7.3",
    "pygments>=2.20.0",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-extensions>=4.1",
]

